# mkdocs-obsidian-template

./: .gitignore  404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  mkdocs_temp.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  graph.json  hotkeys.json  workspace.json
.obsidian/plugins/drawio-obsidian/: data.json
.obsidian/plugins/editing-toolbar/: data.json  main.js  manifest.json  styles.css
.obsidian/plugins/emoji-autocomplete/: data.json  main.js  styles.css  (+1 more)
.obsidian/snippets/: page_width.css  zotero-annotations.css
Excalidraw/: Drawing 2024-09-09 09.42.57.excalidraw.md
Features/Admonitions/: index.html
Features/Diagrams/: index.html
Features/Draw/: index.html
Features/Icons, Emojis/: index.html
Features/Image/: index.html
Features/LaTeX Math Support/: index.html
Features/Table/: index.html
Features/Text Formatting/: index.html
Features/code/: index.html
Features/footntoes/: index.html
Topic 1/Note 1/: index.html
Topic 1/Note 2/: index.html
assests/drawio/: test.drawio
blog/: index.html
docs/Features/: Admonitions.md  Diagrams.md  Draw.io.md  Draw.md  Icons, Emojis.md  Image.md  LaTeX Math Support.md  Mermaid Diagrams.md  Table.md  Text Formatting.md  code.md  footntoes.md  list.md  markdown_extensions.md
docs/Topic 1/: Note 1.md
scripts/: __init__.py  formatter.py
search/: search_index.json
(+23 files in other folders)
