[project]
name = "mkdocs-obsidian-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.5.34",
    "pymdown-extensions>=10.9",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.8",
    "mkdocs-obsidian-bridge>=1.0.4",
]

[project.scripts]
format_md=".scripts:convert_obsidian_callouts"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
